--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.pi4j</groupId>
+		    <artifactId>pi4j-core</artifactId>
+		   <version>1.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
